fix: CreateHoldReservationResponseDtoV1 수정
- CreateHoldReservationResponseDtoV1에서 CreateHoldReservationResponseDtoV2를 반환하고 있어 실패 응답 수정
- 메서드명 소문자로 통일
- Collectors.toList() 대신 toList()를 사용 간결하게 수정